# fastapi-course

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Script.sql  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dependencies.py  exceptions.py  hotels.py  main.py
app/api/: auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
app/connectors/: redis_connector.py
app/migrations/: env.py
app/migrations/versions/: 2026_01_12_1402-afe7c8c70bcd_initial_migration.py  2026_01_12_1437-0c6f259ad8bc_add_rooms.py  2026_02_14_0917-e3bfbc2127a8_add_users.py  2026_02_14_0954-e0ad035d0b58_fix_pass_coloumn_in_users.py  2026_02_14_1003-f4bed2584b0e_email_coloumn_now_is_unique.py  2026_02_15_1234-90a520369cb3_add_bookings.py  2026_02_18_1326-986626d0aa96_add_facilities.py  b010e266a71f_added_rooms_table.py
app/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
app/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
app/repositories/mappers/: base.py  mappers.py
app/schemas/: bookings.py  hotels.py  rooms.py  users.py
app/services/: auth.py  booking.py  facilities.py  hotels.py  images.py  rooms.py
app/tasks/: celery_app.py  tasks.py
app/utils/: db_manager.py
tests/: conftest.py
tests/integration_tests/: test_auth.py
tests/integration_tests/auth/: test_api.py
tests/integration_tests/booking/: test_api.py  test_db.py
tests/integration_tests/facilities/: test_api.py
(+2 files in other folders)
